[gd_scene load_steps=32 format=2]

[ext_resource path="res://New Piskel (9).png" type="Texture" id=1]
[ext_resource path="res://Testing resources/protag_kun.png" type="Texture" id=2]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=3]
[ext_resource path="res://Armcode.gd" type="Script" id=4]
[ext_resource path="res://idle.png" type="Texture" id=5]
[ext_resource path="res://reload during.png" type="Texture" id=6]
[ext_resource path="res://reload inital.png" type="Texture" id=7]
[ext_resource path="res://reload during (1).png" type="Texture" id=8]
[ext_resource path="res://liberals when (1).png" type="Texture" id=9]
[ext_resource path="res://Selector.png" type="Texture" id=10]
[ext_resource path="res://image.png" type="Texture" id=11]
[ext_resource path="res://sign.png" type="Texture" id=12]
[ext_resource path="res://Minecraft.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://deagal.png" type="Texture" id=14]
[ext_resource path="res://words.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.7566, 3.20574 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.82324, 8.19266 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.46177, 18.9342 )

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ArmPosition:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1.63853, -0.25, 0, 0.25, 0, 1.63853, -0.25, 0, 0.25, 0, 1.63853, -0.25, 0, 0.25, 0, 1.63853, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ArmPosition:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -8.19266, -0.25, 0, 0.25, 0, -7.46443, -0.25, 0, 0.25, 0, -7.50581, -0.25, 0, 0.25, 0, -8.0106, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 )
}

[sub_resource type="Animation" id=5]
resource_name = "Idle_flipped"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 4 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ArmPosition:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -2.18471, -0.25, 0, 0.25, 0, -2.00265, -0.25, 0, 0.25, 0, -2.00265, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ArmPosition:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -7.46442, -0.25, 0, 0.25, 0, -8.0106, -0.25, 0, 0.25, 0, -8.73884, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3 )
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Run_animation:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ArmPosition:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 8.55678, -0.25, 0, 0.25, 0, 8.9209, -0.25, 0, 0.25, 0, 9.64914, -0.25, 0, 0.25, 0, 9, -0.25, 0, 0.25, 0, 6.19001, -0.25, 0, 0.25, 0, 6.91825, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ArmPosition:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -8.9209, -0.25, 0, 0.25, 0, -8.55678, -0.25, 0, 0.25, 0, -6.55413, -0.25, 0, 0.25, 0, -6, -0.25, 0, 0.25, 0, -11.2877, -0.25, 0, 0.25, 0, -10.7415, -0.25, 0, 0.25, 0, -7, -0.25, 0, 0.25, 0, -7, -0.25, 0, 0.25, 0, -6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 )
}

[sub_resource type="Animation" id=7]
resource_name = "reload"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("reload:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "reload_from"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("reload_swap:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "reload_idle"
tracks/0/type = "value"
tracks/0/path = NodePath("reload_idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 1 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("reload_swap:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 5, 5, 5, 5, 5 ]
}

[sub_resource type="Animation" id=11]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Run_animation:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ArmPosition:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -8.557, -0.25, 0, 0.25, 0, -8.921, -0.25, 0, 0.25, 0, -9.649, -0.25, 0, 0.25, 0, -9, -0.25, 0, 0.25, 0, -6.19, -0.25, 0, 0.25, 0, -6.918, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ArmPosition:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -8.921, -0.25, 0, 0.25, 0, -8.557, -0.25, 0, 0.25, 0, -6.554, -0.25, 0, 0.25, 0, -6, -0.25, 0, 0.25, 0, -11.288, -0.25, 0, 0.25, 0, -10.741, -0.25, 0, 0.25, 0, -7, -0.25, 0, 0.25, 0, -7, -0.25, 0, 0.25, 0, -6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 )
}

[sub_resource type="Animation" id=12]
resource_name = "position_1"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Selector:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -32.5597, -0.000160217 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "position_2"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Selector:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10.5246, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "position_3"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Selector:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10.5246, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "position_4"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Selector:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32.2755, 0 ) ]
}

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 13 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 5.49272, 5.49272 )
script = ExtResource( 3 )

[node name="ArmPosition" type="Position2D" parent="."]
position = Vector2( 1.63853, -8.19266 )
scale = Vector2( 0.759682, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Arm" type="Area2D" parent="ArmPosition"]
position = Vector2( 0.479307, -1.36726 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ArmPosition/Arm"]
position = Vector2( 2.38419e-07, 0 )
scale = Vector2( 1.12433, 0.800069 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -2.646 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArmPosition/Arm"]
position = Vector2( 12.2222, 1.18157 )
scale = Vector2( 0.976899, 0.908666 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="ArmPosition/Arm/CollisionShape2D"]
position = Vector2( 12.976, -0.601 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 8.74228e-08
scale = Vector2( 0.898, 0.898 )
texture = ExtResource( 5 )
hframes = 2
vframes = 3

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0.364118, 10.5594 )
shape = SubResource( 2 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Reload_Time" type="Timer" parent="ReloadTimer"]
wait_time = 0.2

[node name="Run_animation" type="Sprite" parent="."]
visible = false
position = Vector2( -2.18471, -15.1109 )
rotation = 3.14159
scale = Vector2( -0.893, -0.893 )
texture = ExtResource( 2 )
hframes = 3
vframes = 3
frame = 7

[node name="HitBox" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
position = Vector2( -1.09235, 0.364118 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )
anims/Idle_flipped = SubResource( 5 )
anims/Running = SubResource( 6 )
anims/reload = SubResource( 7 )
anims/reload_from = SubResource( 8 )
anims/reload_idle = SubResource( 9 )
anims/reload_to = SubResource( 10 )
anims/running_flipped = SubResource( 11 )

[node name="Chargereload" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="chargetimer" type="Timer" parent="."]

[node name="reload" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.898, 0.898 )
texture = ExtResource( 6 )
hframes = 2
vframes = 6
frame = 1

[node name="reload_swap" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.898, 0.898 )
texture = ExtResource( 7 )
hframes = 2
vframes = 3

[node name="reload_idle" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.898, 0.898 )
texture = ExtResource( 8 )
vframes = 2
frame = 1

[node name="Reptimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Libtimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Inventory" type="Sprite" parent="."]
visible = false
position = Vector2( 9.53674e-07, -27.673 )
scale = Vector2( 0.518953, 0.518953 )
texture = ExtResource( 11 )

[node name="position" type="AnimationPlayer" parent="Inventory"]
anims/position_1 = SubResource( 12 )
anims/position_2 = SubResource( 13 )
anims/position_3 = SubResource( 14 )
anims/position_4 = SubResource( 15 )

[node name="Meme" type="Sprite" parent="Inventory"]
position = Vector2( -31.752, -0.364548 )
scale = Vector2( 0.329251, 0.329251 )
texture = ExtResource( 9 )

[node name="Gun" type="Sprite" parent="Inventory"]
position = Vector2( -10.5029, 1.40022 )
scale = Vector2( 0.280711, 0.280711 )
texture = ExtResource( 14 )

[node name="Sign" type="Sprite" parent="Inventory"]
position = Vector2( -46.2127, -2.10059 )
scale = Vector2( 0.443456, 0.443456 )
texture = ExtResource( 12 )
offset = Vector2( 127.895, 4.73683 )

[node name="Words" type="Sprite" parent="Inventory"]
position = Vector2( 32.2089, -0.000183105 )
scale = Vector2( 0.261637, 0.261637 )
texture = ExtResource( 15 )

[node name="Selector" type="Sprite" parent="Inventory"]
position = Vector2( -32.5597, -0.000160217 )
scale = Vector2( 0.962763, 0.962763 )
texture = ExtResource( 10 )

[node name="Amount" type="Label" parent="Inventory/Selector"]
margin_left = 0.727272
margin_top = 3.6362
margin_right = 18.7273
margin_bottom = 19.6362
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 16 )
text = "1x"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="ReloadTimer/Reload_Time" to="." method="_on_Reload_Time_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="Chargereload" to="." method="_on_Chargereload_timeout"]
[connection signal="timeout" from="chargetimer" to="." method="_on_chargetimer_timeout"]
[connection signal="timeout" from="Reptimer" to="." method="_on_Reptimer_timeout"]
[connection signal="timeout" from="Libtimer" to="." method="_on_Libtimer_timeout"]
